# cookiecutter-poetry

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  cookiecutter.json  main.py  pre-commit-config.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yaml
docs/: conf.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.repository_name }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.repository_name }}/docs/: index.md
